tenants/3scale-example/rhbk/overlays/3scale-example-site1/admin-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: keycloak-ingress-admin
spec:
  host: keycloak-adm.apps.cluster-vt5rq.dynamic.redhatworkshops.io
  to:
    kind: Service
    name: keycloak-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
